--- a/style.css
+++ b/style.css
@@ -1,7 +1,34 @@
-* {
-  font-family: "Helvetica", "Arial", "san-serif";
+header {
+  height: 100px;
+  border-bottom: 1px solid #ccc;
 }
 
-body {
-  padding: 0 30px 0 30px;
+header nav {
+  float:right;
+}
+
+nav ul {
+  padding:0;
+  margin:40px 0 0 0;
+}
+
+nav ul li {
+  display: inline;
+  margin-right: 10px;
+}
+
+nav a {
+  color: #007bff;
+  font-size: 18px;
+  text-decoration: none;
+}
+
+header h3 {
+  font-size: 30px;
+  float: left;
+}
+
+header h3 a {
+  text-decoration: none;
+  color: #868e96;
 }
